[gd_scene load_steps=5 format=3 uid="uid://cf7l66m67ifnl"]

[ext_resource type="Script" path="res://scenes/common/crop.gd" id="1_mhvpr"]
[ext_resource type="Texture2D" uid="uid://blwbx4nolmlvd" path="res://tilesets/farming-tiles.png" id="2_whxok"]
[ext_resource type="PackedScene" uid="uid://dsch8uuu6c8fg" path="res://scenes/common/interact_area.tscn" id="3_2n4l8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_06dov"]
size = Vector2(16, 16)

[node name="Crop" type="Node2D"]
script = ExtResource("1_mhvpr")

[node name="Ground" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("2_whxok")
region_enabled = true
region_rect = Rect2(112, 48, 16, 16)

[node name="CropSprite" type="Sprite2D" parent="."]

[node name="InteractArea" parent="." instance=ExtResource("3_2n4l8")]
collision_layer = 16
collision_mask = 0
monitoring = false
interact_type = "crop"

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractArea"]
shape = SubResource("RectangleShape2D_06dov")

[connection signal="mouse_entered" from="InteractArea" to="." method="_on_interact_area_mouse_entered"]
[connection signal="mouse_exited" from="InteractArea" to="." method="_on_interact_area_mouse_exited"]
